<resources>
    <string name="app_name">MyRestaurant</string>
    <string name="google_maps_API_key">Gtdashdashdhasd-56sjdabsjdbas_njdfbdsjfds_v_fdfdjf</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Price</string>
    <string name="item_description">Descriptions</string>
    <string name="item_add">Add</string>
    <string name="item_viewlist">View</string>

    <string name="user_name">Name</string>
    <string name="user_phone">Phone No</string>
    <string name="user_email">Email Address</string>
    <string name="user_address">Address</string>
    <string name="user_regis">Submit</string>

    <string name="pref_file">com.myrestaurent.preference_file</string>
    <string name="pref_lgoin_status">com.myrestaurent.preference_login_status</string>
    <string name="pref_user_name">com.myrestaurent.preference_login_name</string>
    <string name="pref_user_id">com.myrestaurent.preference_login_id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
